--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown" >
             <ul class="navbar-nav " >
                 <li class="nav-item bold" >
-                    <a class="nav-link" aria-current="page" th:href="@{/home}">Home</a>
+                    <a class="nav-link"  th:href="@{/home}">Home</a>
                 </li>
                 <li class="nav-item bold">
                     <a class="nav-link"  th:href="@{/listProperties}">List Properties</a>
                 </li>
                 <li class="nav-item bold">
-                    <a class="nav-link" th:href="@{/help}">Help</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/help}">Help</a>
                 </li>
             </ul>
         </div>
